--- a/package.json
+++ b/package.json
@@ -43,11 +43,17 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@giphy/js-fetch-api": "^4.0.3",
+    "@giphy/react-components": "^3.2.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.2",
     "mobx": "^6.3.1",
     "mobx-react-lite": "^3.2.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-bootstrap": "^1.6.1",
+    "react-dom": "^17.0.1",
+    "react-giphy-searchbox": "^1.5.4"
   },
   "browserslist": [
     "since 2017-06"
