--- a/package.json
+++ b/package.json
@@ -47,11 +47,13 @@
     "@giphy/js-fetch-api": "^4.0.3",
     "@giphy/react-components": "^3.2.3",
     "@material-ui/core": "^4.12.2",
+    "@sindresorhus/to-milliseconds": "^2.0.0",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "mobx": "^6.3.1",
     "mobx-react-lite": "^3.2.0",
     "node-sass": "^6.0.1",
+    "parse-ms": "^3.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.1",
