--- a/package.json
+++ b/package.json
@@ -54,14 +54,22 @@
     "mobx-react-lite": "^3.2.0",
     "node-sass": "^6.0.1",
     "parse-ms": "^3.0.0",
+    "re-resizable": "^6.9.0",
     "react": "^17.0.1",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.1",
+    "react-download-link": "^2.3.0",
+    "react-draggable": "^4.4.3",
     "react-giphy-searchbox": "^1.5.4",
     "react-grid-gallery": "^0.5.5",
     "react-masonry-css": "^1.0.16",
+    "react-moveable": "^0.29.0",
     "react-native-video": "^5.1.1",
     "react-player": "^2.9.0",
+    "react-resizable": "^3.0.4",
+    "react-resizable-rotatable-draggable": "^0.2.0",
+    "react-rnd": "^10.3.4",
+    "react-rotatable": "^1.0.2",
     "react-stars": "^2.2.5",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3"
